# captcha-rs

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Jenkinsfile  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: CI.yml  RELEASE.yml  main.yml  master.yml  test.yml
.jules/: sentinel.md
benches/: captcha_bench.rs
examples/: custom_font.rs  generate.rs  stateless.rs
src/: captcha.rs  lib.rs
src/captcha/: mod.rs  standard.rs
tests/: test_dos.rs  test_large_text.rs
