[package]
name = "captcha-rs"
version = "0.2.11"
edition = "2021"
authors = ["Samir Djelal <ssdjelal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/samirdjelal/captcha-rs"
license = "MIT"
homepage ="https://github.com/samirdjelal/captcha-rs"
documentation = "https://github.com/samirdjelal/captcha-rs/blob/main/README.md"
keywords = ["captcha-rs", "captcha"]
description = "Generate verification images dynamically"
exclude = [
    "images/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
base64 = "0.21.0"
imageproc= "0.23.0"
rusttype = "0.9.2"
rand = "0.9.2"
image = "0.25.8"
