[package]
name = "captcha-rs"
version = "0.5.0"
edition = "2024"
authors = ["Samir Djelal <ssdjelal@gmail.com>"]
readme = "README.md"
repository = "https://github.com/samirdjelal/captcha-rs"
license = "MIT"
homepage ="https://github.com/samirdjelal/captcha-rs"
documentation = "https://github.com/samirdjelal/captcha-rs/blob/main/README.md"
keywords = ["captcha-rs", "captcha"]
description = "Generate verification images dynamically"
exclude = [
    "images/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
base64 = "0.22.1"
imageproc = "0.26.0"
ab_glyph = "0.2.32"
jsonwebtoken = { version = "9.3.0", optional = true }
sha2 = { version = "0.10.8", optional = true }
serde = { version = "1.0.228", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "captcha_bench"
harness = false

[features]
stateless = ["dep:jsonwebtoken", "dep:serde", "dep:sha2"]
